// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VHNotification.vue renders Error VHNotification 1`] = `
<div class="VHNotification VHNotification--error">
  <vh-icon-stub name="error" size="large" color="darkRed" class="VHNotification-svg"></vh-icon-stub>
  <div class="VHNotification-message">A simple error notification message.</div>
</div>
`;

exports[`VHNotification.vue renders Success VHNotification 1`] = `
<div class="VHNotification VHNotification--success">
  <vh-icon-stub name="error" size="large" color="darkGreen" class="VHNotification-svg"></vh-icon-stub>
  <div class="VHNotification-message">A simple error notification message.</div>
</div>
`;

exports[`VHNotification.vue renders Warning VHNotification 1`] = `
<div class="VHNotification VHNotification--warning">
  <vh-icon-stub name="error" size="large" color="darkYellow" class="VHNotification-svg"></vh-icon-stub>
  <div class="VHNotification-message">A simple error notification message.</div>
</div>
`;

exports[`VHNotification.vue renders default Info VHNotification 1`] = `
<div class="VHNotification VHNotification--info">
  <vh-icon-stub name="error" size="large" color="darkBlue" class="VHNotification-svg"></vh-icon-stub>
  <div class="VHNotification-message">A simple error notification message.</div>
</div>
`;

exports[`VHNotification.vue renders dissmissible Info VHNotification 1`] = `
<div class="VHNotification VHNotification--info">
  <vh-icon-stub name="error" size="large" color="darkBlue" class="VHNotification-svg"></vh-icon-stub>
  <div class="VHNotification-message">A simple error notification message.</div><button class="VHNotification-closeButton">
    <vh-icon-stub name="close" size="medium" color="darkBlue"></vh-icon-stub>
  </button>
</div>
`;
